@@ -8,7 +8,8 @@ All entries are dated according to merging into the code in dev branch. THIS MEA
 NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
-
+2016-08-05 DariusIII
+	Fix: User cart operations in themes
 2016-08-05 niel
 	Fix: Changes to Install's bootstrap process that prevent use of Settings table before it is
 		created.
